--- a/ets2panda/bindings/package.json
+++ b/ets2panda/bindings/package.json
@@ -5,6 +5,7 @@
   "devDependencies": {
     "@tsconfig/recommended": "^1.0.2",
     "@types/node": "^18.0.0",
+    "prettier": "latest",
     "rimraf": "^6.0.1",
     "typescript": "4.9.5",
     "node-api-headers": "^1.4.0"
@@ -14,7 +15,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "compile": "tsc --build --verbose tsconfig.json",
     "clean": "rimraf dist tsconfig.tsbuildinfo package-lock.json",
-    "run": "npm run clean && npm run compile"
+    "run": "npm run clean && npm run compile",
+    "format": "npx prettier --write ."
   },
   "author": "",
   "license": "ISC",
