Annotate function objects with function names
Issue: https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/IC10S3
Signed-off-by: Sizov Nikita <sizov.nikita@huawei.com>
Change-Id: I32f56ee6716fddf470962745401184deb13d4080

--- a/ets2panda/compiler/scripts/signatures.yaml
+++ b/ets2panda/compiler/scripts/signatures.yaml
@@ -210,6 +210,8 @@ defines:
     ref: MIN_ARGSCOUNT_OF_FUNC
   - name: 'gensym%%_anonymous_const'
     ref: EXPORT_DEFAULT_CONSTANT_ANONYMOUSLY
+  - name: 'NamedFunctionObject'
+    ref: NAMED_FUNCTION_OBJECT
 
 packages:
   - name: 'std.core'
