--- a/ets2panda/bindings/BUILD.gn
+++ b/ets2panda/bindings/BUILD.gn
@@ -22,12 +22,9 @@ npm_path = "//prebuilts/build-tools/common/nodejs/current/bin/npm"
 
 shared_library("ts_bindings") {
   sources = [
-    "./native/src/bridges.cpp",
     "./native/src/callback-resource.cpp",
     "./native/src/common-interop.cpp",
-    "./native/src/common.cpp",
     "./native/src/convertors-napi.cpp",
-    "./native/src/generated/bridges.cpp",
     "./native/src/lsp.cpp",
   ]
   configs += [
@@ -183,8 +180,163 @@ shared_library("ts_bindings") {
   }
 }
 
+shared_library("public") {
+  sources = [
+    "./native/src/bridges.cpp",
+    "./native/src/callback-resource.cpp",
+    "./native/src/common-interop.cpp",
+    "./native/src/common.cpp",
+    "./native/src/convertors-napi.cpp",
+  ]
+
+  configs += [
+    "$ark_root/assembler:arkassembler_public_config",
+    "../:libes2panda_public_config",
+    "../:libes2panda_config",
+    "$ark_root/libpandabase:arkbase_public_config",
+    "$ark_root/libpandafile:arkfile_public_config",
+  ]
+
+  include_dirs = [
+    "./native/include",
+    "../public/",
+    "//third_party/node/src",
+    rebase_path("$root_gen_dir/arkcompiler/ets_frontend/ets2panda/"),
+  ]
+
+  if (!is_mac) {
+    deps = [ "../aot:ets2panda" ]
+  }
+
+  if (ark_standalone_build) {
+    deps += [ "$ark_third_party_root/bounds_checking_function:libsec_shared" ]
+  } else {
+    external_deps = [ sdk_libc_secshared_dep ]
+  }
+
+  defines = [
+    "TS_INTEROP_MODULE=NativeModule",
+    "INTEROP_LIBRARY_NAME=ts_bindings",
+    "TS_USE_NODE_VM",
+    "TS_NAPI",
+  ]
+  if (ark_standalone_build) {
+    configs -= [ "$build_root/config/compiler:compiler" ]
+  } else {
+    configs -= [ "//build/config/compiler:compiler" ]
+  }
+
+  if (is_linux) {
+    cflags_cc = [
+      "-std=c++17",
+      "-Wall",
+      "-Werror",
+      "-Wno-unused-variable",
+      "-fPIC",
+    ]
+
+    ldflags = [
+      "-Wl,--allow-shlib-undefined",
+      "-Wl,--fatal-warnings",
+      "-Wl,--build-id=md5",
+      "-fPIC",
+      "-Wl,-z,noexecstack",
+      "-Wl,-z,now",
+      "-Wl,-z,relro",
+      "-Wl,--as-needed",
+      "-fuse-ld=lld",
+      "-Wl,--icf=all",
+      "-Wl,--color-diagnostics",
+      "-m64",
+    ]
+    output_extension = "node"
+    output_prefix_override = true
+  } else if (is_mingw) {
+    output_extension = "dll"
+    cflags_cc = [
+      "-std=c++17",
+      "-Wall",
+      "-Werror",
+      "-Wno-unused-variable",
+      "-fPIC",
+      "-Wno-error=deprecated-copy",
+      "-enable-trivial-auto-var-init-zero-knowing-it-will-be-removed-from-clang",
+      "-ftrivial-auto-var-init=zero",
+      "-fcolor-diagnostics",
+      "-fmerge-all-constants",
+      "-Xclang",
+      "-mllvm",
+      "-Xclang",
+      "-instcombine-lower-dbg-declare=0",
+      "-no-canonical-prefixes",
+      "-static",
+      "-rtlib=compiler-rt",
+      "-stdlib=libc++",
+      "-lunwind",
+      "-lpthread",
+      "-Qunused-arguments",
+      "-fuse-ld=lld",
+      "-fno-stack-protector",
+      "-fno-strict-aliasing",
+      "-Wno-builtin-macro-redefined",
+      "-fms-extensions",
+      "-static",
+      "-rtlib=compiler-rt",
+      "-stdlib=libc++",
+      "-std=c++17",
+      "-lunwind",
+      "-lpthread",
+      "-Qunused-arguments",
+      "-target",
+      "x86_64-pc-windows-gnu",
+      "-D__CUSTOM_SECURITY_LIBRARY",
+    ]
+
+    ldflags = [
+      "-Wl,--fatal-warnings",
+      "-fPIC",
+      "-Wl,--as-needed",
+      "-fuse-ld=lld",
+      "-Wl,--icf=all",
+      "-m64",
+      "-static",
+      "-rtlib=compiler-rt",
+      "-stdlib=libc++",
+      "-std=c++17",
+      "-lunwind",
+      "-lpthread",
+      "-Qunused-arguments",
+      "-target",
+      "x86_64-pc-windows-gnu",
+    ]
+    sources += [ "./native/src/win-dynamic-node.cpp" ]
+  } else if (is_mac) {
+    cflags_cc = [
+      "-std=c++17",
+      "-Wall",
+      "-Werror",
+      "-Wno-unused-variable",
+      "-fPIC",
+    ]
+
+    ldflags = [
+      "-fPIC",
+      "-fuse-ld=lld",
+      "-Wl,--icf=all",
+      "-Wl,--color-diagnostics",
+      "-m64",
+      "-Wl,-undefined,dynamic_lookup",
+    ]
+    output_extension = "node"
+    output_prefix_override = true
+  }
+}
+
 action("build_bindings") {
-  deps = [ ":ts_bindings" ]
+  deps = [
+    ":public",
+    ":ts_bindings",
+  ]
   sources = [
     "./src/Es2pandaNativeModule.ts",
     "./src/InteropNativeModule.ts",
