fix case blocks dump
Issue: https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/IC1QRC

Tests:
ninja es2panda-plugin-test

Signed-off-by: nikozer <ozerov.nikita@huawei-partners.com>

--- a/ets2panda/test/unit/plugin/CMakeLists.txt
+++ b/ets2panda/test/unit/plugin/CMakeLists.txt
@@ -106,6 +106,7 @@ set(PLUGIN_TESTS
     "use_plugin_to_test_export_table compile.ets ${COMPILE_MODE} cpp ${EXECUTABLE_PLUGIN}"
     "plugin_proceed_to_state_test_global_func_call_dump compile.ets ${COMPILE_MODE} cpp ${EXECUTABLE_PLUGIN}"
     "plugin_proceed_to_state_test_interface_duplicate_setter compile.ets ${COMPILE_MODE} cpp ${EXECUTABLE_PLUGIN}"
+    "plugin_proceed_to_state_test_case_block_dump compile.ets ${COMPILE_MODE} cpp ${EXECUTABLE_PLUGIN}"
 )
 
 set(RUNTIME_ARGUMENTS
