JsDoc Optional and Support JsDoc CAPI
Issue: https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/IC78X1?from=project-issue

Description: in some SDK files, there are some js doc code need to be stored into the related AstNode.

Reason: in some SDK files, there are some js doc code need to be stored into the related AstNode.

Tests:
ninja tests passed
tests/tests-u-runner/runner.sh --ets-cts --show-progress --build-dir x64.release --processes=all passed
tests/tests-u-runner/runner.sh --ets-func-tests --show-progress --build-dir x64.release --processes=all passed
tests/tests-u-runner/runner.sh --astchecker --show-progress --build-dir x64.release --processes=all passed
tests/tests-u-runner/runner.sh --ets-runtime --show-progress --build-dir x64.release --processes=all passed
tests/tests-u-runner/runner.sh --parser --no-js --show-progress --build-dir x64.release --processes=all passed

Signed-off-by: xingshunxiang <xingshunxiang@huawei.com>

--- a/ets2panda/public/cppToCTypes.yaml
+++ b/ets2panda/public/cppToCTypes.yaml
@@ -2895,6 +2895,28 @@ change_types:
   - es2panda_arg:
       name: '|arg_name|'
       type:
+        name: JsDocInfo
+      max_ptr_depth: 0
+    new_args:
+    - type:
+        name: es2panda_JsDocInfo
+        ptr_depth: 1
+      namespace: 'ir::'
+      name: '|arg_name|'
+    cast:
+        expression: "\
+          \tir::JsDocInfo |arg_name|ArenaUnorderedMap{reinterpret_cast<Context *>(context)->allocator->Adapter()};\n
+          \tfor (size_t j = 0; j < |arg_name|->len; ++j) {\n
+          \t\t|arg_name|ArenaUnorderedMap.emplace(|arg_name|->strings[j], JsDocRecordToE2p(|arg_name|->jsDocRecords[j]));\n
+          \t}"
+        var_name: '|arg_name|ArenaUnorderedMap'
+        reverse_cast:
+          start: JsDocInfoFromE2p(reinterpret_cast<Context *>(context)->allocator,
+          end: )
+
+  - es2panda_arg:
+      name: '|arg_name|'
+      type:
         name: 'Signature'
         namespace: 'checker'
       min_ptr_depth: 1
