sync homecheck and analyzer
Issue: https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/IC1TGR

Signed-off-by: xudan16 <xudan16@huawei.com>

--- a/ets2panda/linter/homecheck/config/projectConfig.json
+++ b/ets2panda/linter/homecheck/config/projectConfig.json
@@ -19,5 +19,7 @@
       "moduleName": ""
     }
   ],
-  "fileOrFolderToCheck": [ "D:\\arkProject" ]
+  "fileOrFolderToCheck": [ "D:\\arkProject" ],
+  "logLevel": "INFO",
+  "arkAnalyzerLogLevel": "ERROR"
 }
