Title:CTE-Implementing interface properties
Issue: IBYNNA
Test: Build
Signed-off-by: beratagaca_9a91 <berat.agaca1@huawei.com>

--- a/ets2panda/util/diagnostic/semantic.yaml
+++ b/ets2panda/util/diagnostic/semantic.yaml
@@ -1338,3 +1338,7 @@ semantic:
 - name: CAST_FAIL_UNREACHABLE
   id: 336
   message: "this cast should never fail"
+
+- name: INTERFACE_PROPERTY_REQUIRES_SETTER
+  id: 337
+  message: "Cannot implement interface {}: property '{}' must have a setter, but the implementation is readonly"
