Title:CTE-Implementing interface properties
Issue: IC372X
Test: Build
Signed-off-by: beratagaca_9a91 <berat.agaca1@huawei.com>

--- a/ets2panda/util/diagnostic/semantic.yaml
+++ b/ets2panda/util/diagnostic/semantic.yaml
@@ -1126,3 +1126,7 @@ semantic:
 - name: NOT_ALLOWED_THIS_IN_ARRAY_TYPE
   id: 283
   message: "A 'this' cannot be used as type of array."
+
+- name: INTERFACE_PROPERTY_REQUIRES_SETTER
+  id: 284
+  message: "Cannot implement interface {}: property '{}' must have a setter, but the implementation is readonly"
