--- a/ets2panda/linter/package.json
+++ b/ets2panda/linter/package.json
@@ -21,10 +21,11 @@
     "pack:linter": "rimraf bundle && mkdir bundle && npm pack --pack-destination bundle",
     "pretest": " npm run fix",
     "test": "npm run test_all && npm run test_ts_import_ets",
-    "test_all": "npm run testrunner -- -d test/main,test/rules,test/regression,test/extended_features,test/ohmurl,test/interop,test/sdkwhite",
+    "test_all": "npm run testrunner -- -d test/main,test/rules,test/regression,test/extended_features,test/ohmurl,test/interop,test/sdkwhite,test/concurrent",
     "test_main": "npm run testrunner -- -d test/main",
     "test_ohmurl": "npm run testrunner -- -d test/ohmurl",
     "test_interop": "npm run testrunner -- -d test/interop",
+    "test_concurrent": "npm run testrunner -- -d test/concurrent",
     "test_rules": "npm run testrunner -- -d test/rules",
     "test_regression": "npm run testrunner -- -d test/regression",
     "test_extended_features": "npm run testrunner -- -d test/extended_features",
