Title:bug fix #DTS2025032419456
Description(optional):Unreachable statement. Error registration changed to Warning

Issue:https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/IC2EIL

Signed-off-by: semon <584648456@qq.com>

--- a/ets2panda/util/diagnostic/warning.yaml
+++ b/ets2panda/util/diagnostic/warning.yaml
@@ -111,3 +111,7 @@ warning:
 - name: EXTENSION_MISMATCH
   id: 25
   message: "Not matching extensions! Sourcefile: {}, Manual(used): {}"
+
+- name: UNREACHABLE_STMT
+  id: 26
+  message: "Unreachable statement."
