[LSP API] CreateSignatureHelpItems
Issue: https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/IC1GDH
Signed-off-by: irfan-karatekin <irfan.karatekin1@huawei-partners.com>

--- a/ets2panda/lsp/CMakeLists.txt
+++ b/ets2panda/lsp/CMakeLists.txt
@@ -31,6 +31,7 @@ set(ES2PANDA_LSP_SRC
   ./src/line_column_offset.cpp
   ./src/inlay_hints.cpp
   ./src/create_type_help_items.cpp
+  ./src/signature_help_items.cpp
 )
 
 panda_add_library(${LSP_LIB} SHARED ${ES2PANDA_LSP_SRC})
