--- a/ets2panda/test/unit/lsp/CMakeLists.txt
+++ b/ets2panda/test/unit/lsp/CMakeLists.txt
@@ -131,3 +131,7 @@ ets2panda_add_gtest(lsp_api_test_find_rename_locations CPP_SOURCES
 ets2panda_add_gtest(lsp_api_test_create_type_help_items CPP_SOURCES
     create_type_help_items_test.cpp
 )
+
+ets2panda_add_gtest(lsp_api_test_signature_help_items CPP_SOURCES
+    signature_help_items_test.cpp
+)
