--- a/ets2panda/util/diagnostic/semantic.yaml
+++ b/ets2panda/util/diagnostic/semantic.yaml
@@ -1362,7 +1362,11 @@ semantic:
 - name: ERROR_ARKTS_NO_ENUM_MIXED_TYPES
   id: 342
   message: "Enumeration members can be initialized only by compile-time expressions and initializers must be of the same type."
-  
+
 - name: ERROR_ARKTS_NO_PROPERTIES_BY_INDEX
   id: 343
   message: "Indexed signatures are not allowed. Use arrays instead!"
+
+- name: USE_BEFORE_INIT
+  id: 344
+  message: "{} '{}' is used before being assigned."
