Fix the bug of readonly utility type
Issue: https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/IC360N

Tested-by:
ninja tests (passed)
ets_testrunner (passed)

Signed-off-by: tengtengh <tenghao9@huawei.com>

--- a/ets2panda/util/diagnostic/semantic.yaml
+++ b/ets2panda/util/diagnostic/semantic.yaml
@@ -1342,3 +1342,7 @@ semantic:
 - name: INTERFACE_PROPERTY_REQUIRES_SETTER
   id: 337
   message: "Cannot implement interface {}: property '{}' must have a setter, but the implementation is readonly"
+
+- name: READONLY_PROPERTY_REASSIGN
+  id: 338
+  message: "The 'Readonly' property cannot be reassigned."
