--- a/ets2panda/compiler/scripts/signatures.yaml
+++ b/ets2panda/compiler/scripts/signatures.yaml
@@ -202,6 +202,12 @@ defines:
     ref: FROM
   - name: 'Numeric'
     ref: NUMERIC
+  - name: 'functions'
+    ref: DEFAULT_ANNO_QUALIFIED_LEFT
+  - name: 'OptionalParametersAnnotation'
+    ref: DEFAULT_ANNO_FOR_FUNC
+  - name: 'minArgCount'
+    ref: MIN_ARGSCOUNT_OF_FUNC
 
 packages:
   - name: 'std.core'
