Add 'version' option to options.yaml
Issue: #IC36OU

Signed-off-by: Vyacheslav Cherkashin <cherkashin.vyacheslav@huawei.com>

--- a/ets2panda/util/options.yaml
+++ b/ets2panda/util/options.yaml
@@ -22,6 +22,11 @@ options:
   default: false
   description: Print this message and exit
 
+- name: version
+  type: bool
+  default: false
+  description: Print version and exit
+
 - name: arktsconfig
   type: std::string
   default: $ORIGIN/arktsconfig.json
