Fix the enum cannot be used as Record key
Issue:
 https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/IC3KJT

Description:
 Enum types need to be handled when comparing with the ConstraintType of Record key

Tests:
 all test passed

Signed-off-by: menjiaheng <menjiaheng@h-partners.com>

--- a/ets2panda/compiler/scripts/signatures.yaml
+++ b/ets2panda/compiler/scripts/signatures.yaml
@@ -200,6 +200,8 @@ defines:
     ref: TYPE
   - name: 'from'
     ref: FROM
+  - name: 'Numeric'
+    ref: NUMERIC
 
 packages:
   - name: 'std.core'
