--- a/ets2panda/lsp/BUILD.gn
+++ b/ets2panda/lsp/BUILD.gn
@@ -56,6 +56,7 @@ ohos_source_set("libes2panda_lsp_static") {
     "src/rename.cpp",
     "src/services/services.cpp",
     "src/services/utilities.cpp",
+    "src/signature_help.cpp",
     "src/signature_help_items.cpp",
     "src/string_completions.cpp",
     "src/suggestion_diagnostics.cpp",
