--- a/ets2panda/lsp/BUILD.gn
+++ b/ets2panda/lsp/BUILD.gn
@@ -43,6 +43,7 @@ ohos_source_set("libes2panda_lsp_static") {
     "src/api.cpp",
     "src/brace_matching.cpp",
     "src/cancellation_token.cpp",
+    "src/class_hierarchy.cpp",
     "src/classifier.cpp",
     "src/completions.cpp",
     "src/create_type_help_items.cpp",
