--- a/ets2panda/lsp/BUILD.gn
+++ b/ets2panda/lsp/BUILD.gn
@@ -51,6 +51,7 @@ ohos_source_set("libes2panda_lsp_static") {
     "src/get_adjusted_location.cpp",
     "src/internal_api.cpp",
     "src/line_column_offset.cpp",
+    "src/organize_imports.cpp",
     "src/quick_info.cpp",
     "src/references.cpp",
     "src/rename.cpp",
