Remove LogSemanticError from binder
Does not rename ThrowError, because not all descendant classes use
LogDiagnostic, VarBinder does in fact throw an error.

Fixes #25594 internal issue.

Issue: https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/IC59V9

Change-Id: I49272cad00fbeb86c62c24618d51be6f4004d695
Signed-off-by: Peter Pronai <peter.pronai.hlab@gmail.com>

--- a/ets2panda/util/diagnostic/syntax.yaml
+++ b/ets2panda/util/diagnostic/syntax.yaml
@@ -1213,5 +1213,9 @@ syntax:
   message: "Missing body in {} statement"
 
 - name: MISSING_LOOP_CONDITION
-  id: 3001
+  id: 301
   message: "Missing condition in {} statement"
+
+- name: PRIVATE_FIELD_MISMATCH
+  id: 302
+  message: "Private field '{}' must be declared in an enclosing class"
