--- a/ets2panda/driver/dependency_analyzer/BUILD.gn
+++ b/ets2panda/driver/dependency_analyzer/BUILD.gn
@@ -20,21 +20,37 @@ ohos_executable("dependency_analyzer") {
     "main.cpp",
   ]
 
-  include_dirs = [ "$target_gen_dir" ]
-
   configs = [
     "$ark_root:ark_config",
+    "$ark_root/assembler:arkassembler_public_config",
     "$ark_es2panda_root:libes2panda_public_config",
+    "$ark_root/libpandafile:arkfile_public_config",
+    "$ark_root/libpandabase:arkbase_public_config",
+    "$ark_root/bytecode_optimizer:bytecodeopt_public_config",
+    "$ark_root/compiler:arkcompiler_public_config",
+    "$ark_root/runtime:arkruntime_public_config",
   ]
 
   deps = [
     "$ark_es2panda_root:libes2panda_frontend_static",
     "$ark_es2panda_root:libes2panda_public_frontend_static",
   ]
+
+  if (ark_standalone_build) {
+    deps += [
+      "$ark_root/bytecode_optimizer:libarktsbytecodeopt_package",
+      "$ark_root/libpandabase:libarktsbase_package",
+      "$ark_root/libpandafile:libarktsfile_package",
+    ]
+  }
+
   external_deps = [
+    "runtime_core:libarktsassembler_package",
+    "runtime_core:libarktsbase_package",
     "runtime_core:libarktsbytecodeopt_package",
     "runtime_core:libarktscompiler_package",
     "runtime_core:libarktsfile_package",
+    sdk_libc_secshared_dep,
   ]
 
   libs = platform_libs
