support getApplicableRefactors convertFunction
support getApplicableRefactors convertFunction

Issue: https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/IC5HG4

Signed-off-by: leo9001 <wanglong201@h-partners.com>

--- a/ets2panda/lsp/CMakeLists.txt
+++ b/ets2panda/lsp/CMakeLists.txt
@@ -26,6 +26,8 @@ set(ES2PANDA_LSP_SRC
   ./src/find_rename_locations.cpp
   ./src/find_safe_delete_location.cpp
   ./src/find_references.cpp
+  ./src/applicable_refactors.cpp
+  ./src/refactors/convert_function.cpp
   ./src/string_completions.cpp
   ./src/rename.cpp
   ./src/suggestion_diagnostics.cpp
