--- a/ets2panda/test/unit/lsp/CMakeLists.txt
+++ b/ets2panda/test/unit/lsp/CMakeLists.txt
@@ -124,6 +124,10 @@ ets2panda_add_gtest(lsp_api_lco_test CPP_SOURCES
     line_column_offset_test.cpp
 )
 
+ets2panda_add_gtest(lsp_api_get_constructor_test CPP_SOURCES
+    get_constructor_test.cpp
+)
+
 ets2panda_add_gtest(lsp_api_test_auto_completion CPP_SOURCES
     get_auto_completion_test.cpp
 )
