--- a/ets2panda/lsp/BUILD.gn
+++ b/ets2panda/lsp/BUILD.gn
@@ -56,6 +56,7 @@ ohos_source_set("libes2panda_lsp_static") {
     "src/organize_imports.cpp",
     "src/quick_info.cpp",
     "src/references.cpp",
+    "src/generate_constructor.cpp",
     "src/rename.cpp",
     "src/services/services.cpp",
     "src/services/utilities.cpp",
