Add checks if body or test is missing of while
Issue: https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/IC3QY6
Signed-off-by: mehmetakifdurmus <mehmet.akif.durmus@huawei.com>

--- a/ets2panda/util/diagnostic/syntax.yaml
+++ b/ets2panda/util/diagnostic/syntax.yaml
@@ -1207,3 +1207,11 @@ syntax:
 - name: ERROR_ARKTS_NO_DEBUGGER_STATEMENT
   id: 299
   message: "Debugger statement is not supported!"
+
+- name: MISSING_LOOP_BODY
+  id: 300
+  message: "Missing body in {} statement"
+
+- name: MISSING_LOOP_CONDITION
+  id: 3001
+  message: "Missing condition in {} statement"
