--- a/ets2panda/lsp/BUILD.gn
+++ b/ets2panda/lsp/BUILD.gn
@@ -46,6 +46,7 @@ ohos_source_set("libes2panda_lsp_static") {
     "src/class_hierarchy.cpp",
     "src/classifier.cpp",
     "src/completions.cpp",
+    "src/completions_details.cpp",
     "src/create_type_help_items.cpp",
     "src/find_references.cpp",
     "src/find_rename_locations.cpp",
