--- a/ets2panda/lsp/CMakeLists.txt
+++ b/ets2panda/lsp/CMakeLists.txt
@@ -22,6 +22,7 @@ set(ES2PANDA_LSP_SRC
   ./src/references.cpp
   ./src/get_adjusted_location.cpp
   ./src/find_rename_locations.cpp
+  ./src/find_safe_delete_location.cpp
   ./src/find_references.cpp
   ./src/string_completions.cpp
   ./src/rename.cpp
