Allow export anonymous constant variable
Issue:
https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/IC2CDP

Description:
Use the current ir::ExportNamedDeclaration, add a stringview to save the constant expression. Add an ExportAnonymousConstPhase, create a new const VariableDeclaration, and ExportNamedDeclaration

Tested-by:
ninja tests (passed)
ets_testrunner (passed)

Signed-off-by: zengzengran <zengran2@huawei.com>#

--- a/ets2panda/compiler/scripts/signatures.yaml
+++ b/ets2panda/compiler/scripts/signatures.yaml
@@ -208,6 +208,8 @@ defines:
     ref: DEFAULT_ANNO_FOR_FUNC
   - name: 'minArgCount'
     ref: MIN_ARGSCOUNT_OF_FUNC
+  - name: 'gensym%%_anonymous_const'
+    ref: EXPORT_DEFAULT_CONSTANT_ANONYMOUSLY
 
 packages:
   - name: 'std.core'
