--- a/ets2panda/BUILD.gn
+++ b/ets2panda/BUILD.gn
@@ -218,6 +218,7 @@ libes2panda_sources = [
   "compiler/lowering/ets/enumLowering.cpp",
   "compiler/lowering/ets/enumPostCheckLowering.cpp",
   "compiler/lowering/ets/expandBrackets.cpp",
+  "compiler/lowering/ets/exportAnonymousConst.cpp",
   "compiler/lowering/ets/expressionLambdaLowering.cpp",
   "compiler/lowering/ets/extensionAccessorLowering.cpp",
   "compiler/lowering/ets/genericBridgesLowering.cpp",
