--- a/ets2panda/CMakeLists.txt
+++ b/ets2panda/CMakeLists.txt
@@ -284,6 +284,7 @@ set(ES2PANDA_LIB_SRC
   compiler/lowering/ets/defaultParametersInConstructorLowering.cpp
   compiler/lowering/ets/defaultParametersLowering.cpp
   compiler/lowering/ets/dynamicImportLowering.cpp
+  compiler/lowering/ets/exportAnonymousConst.cpp
   compiler/lowering/ets/lambdaLowering.cpp
   compiler/lowering/ets/restTupleLowering.cpp
   compiler/lowering/ets/spreadLowering.cpp
