--- a/ets2panda/util/options.yaml
+++ b/ets2panda/util/options.yaml
@@ -177,6 +177,10 @@ options:
     type: std::string
     default: ""
     description: Output path for generated static declaration files
+  - name: enable-isolated
+    type: bool
+    default: false
+    description: Whether to enable isolated declaration file generation
 
 - name: thread
   type: int
