Fix static invoke in namespace
Issue:https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/ICBRCC

Internal issue: #25283

Change-Id: I1982271bbaec07ec23e040be9d0533178463627b

Signed-off-by: Soma Simon <soma.simon@h-lab.eu>

--- a/ets2panda/util/diagnostic/semantic.yaml
+++ b/ets2panda/util/diagnostic/semantic.yaml
@@ -113,6 +113,10 @@ semantic:
   id: 12
   message: "Invalid value for annotation field, expected a constant literal."
 
+- name: ANNOTATION_INSTANTIATION
+  id: 396
+  message: "{} is an annotation therefore cannot be instantiated."
+
 - name: ANNOTATION_ON_LAMBDA_LOCAL_TYPE
   id: 5
   message: Annotations without 'SOURCE' cannot be used on lambda expressions, local declarations, or types.
