[LSP]: Add some methods for ts bindings
Issue: https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/IC6EYG

Signed-off-by: liushitong <liushitong@huawei.com>

--- a/ets2panda/lsp/CMakeLists.txt
+++ b/ets2panda/lsp/CMakeLists.txt
@@ -36,6 +36,7 @@ set(ES2PANDA_LSP_SRC
   ./src/signature_help_items.cpp
   ./src/signature_help.cpp
   ./src/todo_comments.cpp
+  ./src/types.cpp
 )
 
 panda_add_library(${LSP_LIB} SHARED ${ES2PANDA_LSP_SRC})
