--- a/ets2panda/lsp/BUILD.gn
+++ b/ets2panda/lsp/BUILD.gn
@@ -50,6 +50,7 @@ ohos_source_set("libes2panda_lsp_static") {
     "src/find_references.cpp",
     "src/find_rename_locations.cpp",
     "src/get_adjusted_location.cpp",
+    "src/inlay_hints.cpp",
     "src/internal_api.cpp",
     "src/line_column_offset.cpp",
     "src/organize_imports.cpp",
@@ -63,6 +64,7 @@ ohos_source_set("libes2panda_lsp_static") {
     "src/string_completions.cpp",
     "src/suggestion_diagnostics.cpp",
     "src/todo_comments.cpp",
+    "src/types.cpp",
   ]
   configs = [
     "$ark_root/assembler:arkassembler_public_config",
