--- a/ets2panda/lsp/BUILD.gn
+++ b/ets2panda/lsp/BUILD.gn
@@ -57,6 +57,7 @@ ohos_source_set("libes2panda_lsp_static") {
     "src/quick_info.cpp",
     "src/references.cpp",
     "src/rename.cpp",
+    "src/script_element_kind.cpp",
     "src/services/services.cpp",
     "src/services/utilities.cpp",
     "src/signature_help.cpp",
