--- a/ets2panda/lsp/BUILD.gn
+++ b/ets2panda/lsp/BUILD.gn
@@ -50,6 +50,7 @@ ohos_source_set("libes2panda_lsp_static") {
     "src/find_references.cpp",
     "src/find_rename_locations.cpp",
     "src/get_adjusted_location.cpp",
+    "src/get_definition_and_bound_span.cpp",
     "src/inlay_hints.cpp",
     "src/internal_api.cpp",
     "src/line_column_offset.cpp",
