[LSP-API] getNavigateToItems
Issue:
https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/IC7ZVA
Signed-off-by: saittalhaulutas <sait.talha.ulutas1@huawei.com>

--- a/ets2panda/lsp/CMakeLists.txt
+++ b/ets2panda/lsp/CMakeLists.txt
@@ -46,6 +46,7 @@ set(ES2PANDA_LSP_SRC
   ./src/todo_comments.cpp
   ./src/get_definition_and_bound_span.cpp
   ./src/types.cpp
+  ./src/navigate_to.cpp
 )
 
 panda_add_library(${LSP_LIB} SHARED ${ES2PANDA_LSP_SRC})
