--- a/ets2panda/test/unit/lsp/CMakeLists.txt
+++ b/ets2panda/test/unit/lsp/CMakeLists.txt
@@ -179,3 +179,7 @@ ets2panda_add_gtest(lsp_api_test_get_def_and_bound_span CPP_SOURCES
 ets2panda_add_gtest(lsp_api_test_todo_comments CPP_SOURCES
     todo_comments_test.cpp
 )
+
+ets2panda_add_gtest(lsp_api_test_navigate_to CPP_SOURCES
+    navigate_to_test.cpp
+)
