--- a/ets2panda/lsp/CMakeLists.txt
+++ b/ets2panda/lsp/CMakeLists.txt
@@ -14,6 +14,7 @@
 set(ES2PANDA_LSP_SRC
   ./src/api.cpp
   ./src/class_hierarchy.cpp
+  ./src/class_hierarchy_info.cpp
   ./src/classifier.cpp
   ./src/internal_api.cpp
   ./src/cancellation_token.cpp
