Interface object literal annotation
Issue: https://gitee.com/openharmony/arkcompiler_runtime_core/issues/IC8WD0
Change-Id: I8f2ae68b6a9acbf9e934e26ad70948e698f4d8f2
Signed-off-by: Sizov Nikita <sizov.nikita@huawei.com>

--- a/ets2panda/compiler/scripts/signatures.yaml
+++ b/ets2panda/compiler/scripts/signatures.yaml
@@ -212,6 +212,9 @@ defines:
     ref: EXPORT_DEFAULT_CONSTANT_ANONYMOUSLY
   - name: 'NamedFunctionObject'
     ref: NAMED_FUNCTION_OBJECT
+  - name: 'InterfaceObjectLiteral'
+    ref: INTERFACE_OBJ_LITERAL
+    comment: ETS annotation type
 
 packages:
   - name: 'std.core'
