--- a/ets2panda/compiler/scripts/signatures.yaml
+++ b/ets2panda/compiler/scripts/signatures.yaml
@@ -159,6 +159,8 @@ defines:
     ref: ARRAY
   - name: '<property>'
     ref: PROPERTY
+  - name: 'Any'
+    ref: ANY_TYPE_NAME
   - name: 'never'
     ref: NEVER_TYPE_NAME
   - name: 'SOURCE'
