--- a/ets2panda/lexer/scripts/keywords.yaml
+++ b/ets2panda/lexer/scripts/keywords.yaml
@@ -32,6 +32,11 @@ keywords:
     keyword_like: [ts]
     flags: [reserved_type_name]
 
+  - name: 'Any'
+    token: KEYW_BUILTIN_ANY
+    keyword_like: [ets]
+    flags:  [predefined_type]
+
   - name: 'anyref'
     token: KEYW_ANYREF
     keyword_like: [as]
