--- a/ets2panda/lsp/BUILD.gn
+++ b/ets2panda/lsp/BUILD.gn
@@ -53,6 +53,8 @@ ohos_source_set("libes2panda_lsp_static") {
     "src/find_safe_delete_location.cpp",
     "src/find_references.cpp",
     "src/find_rename_locations.cpp",
+    "src/formatting/formatting_context.cpp",
+    "src/formatting/formatting_settings.cpp",
     "src/get_adjusted_location.cpp",
     "src/get_definition_and_bound_span.cpp",
     "src/inlay_hints.cpp",
