Title:Supplementary rules
Description(optional):Supplementary rules：cannot use `super` to visit the superclass field in subclass

Issue:https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/IC8J4C

Signed-off-by: semon <584648456@qq.com>

--- a/ets2panda/util/diagnostic/semantic.yaml
+++ b/ets2panda/util/diagnostic/semantic.yaml
@@ -1478,3 +1478,7 @@ semantic:
 - name: LATE_INITIALIZATION_FIELD_HAS_INVALID_TYPE
   id: 371
   message: "Late-initialized field cannot be nullish types or possibly nullish types."
+
+- name: SUPER_NOT_ACCESSIBLE
+  id: 372
+  message: "Class field '{}' defined by the parent class is not accessible in the child class via super."
