Stub to deliver primitive cast methods
Issue: https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/IC9IVN
Tests: ./runner.sh --ets-runtime --build-dir $WORK_DIR --processes all; ./runner.sh --ets-cts --build-dir $WORK_DIR --processes all

Signed-off-by: Shimenkov Mikhail <shimenkov.mikhail@huawei-partners.com>
Change-Id: Ide7c7ce1266b7898f40a1e464dbcb8d67ce39dd4

--- a/ets2panda/BUILD.gn
+++ b/ets2panda/BUILD.gn
@@ -212,6 +212,7 @@ libes2panda_sources = [
   "compiler/lowering/ets/cfgBuilderPhase.cpp",
   "compiler/lowering/ets/constStringToCharLowering.cpp",
   "compiler/lowering/ets/constantExpressionLowering.cpp",
+  "compiler/lowering/ets/convertPrimitiveCastMethodCall.cpp",
   "compiler/lowering/ets/declareOverloadLowering.cpp",
   "compiler/lowering/ets/defaultParametersInConstructorLowering.cpp",
   "compiler/lowering/ets/defaultParametersLowering.cpp",
