fix: Optional variable is depricated
Issue: https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/IBZVO9
Reason: Optional type is not supported due to spec 2025.03.11.
Description: Optional varibale types should CTE.
Tests: No new tests, old tests updated.
Signed-off-by: Musa Nazif Boya <musa.nazif.boya1@huawei-partners.com>

--- a/ets2panda/util/diagnostic/syntax.yaml
+++ b/ets2panda/util/diagnostic/syntax.yaml
@@ -1231,3 +1231,7 @@ syntax:
 - name: DEEP_NESTING
   id: 305
   message: "Maximum allowed nesting level exceeded."
+
+- name: OPTIONAL_VARIABLE
+  id: 306
+  message: "Optional variable is deprecated and no longer supported."
