Fix Unexpected CTE
Description: Fixing Unexpected CTE in Record indexing expression #20328
Issue: https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/IBYPCI
Signed-off-by: e84401138 <ertugrul.faruk.piskin@h-partners.com>

--- a/ets2panda/compiler/scripts/signatures.yaml
+++ b/ets2panda/compiler/scripts/signatures.yaml
@@ -358,6 +358,12 @@ builtins:
   - name: Array
     package: PKG_ESCOMPAT
     ref: BUILTIN_ARRAY
+  - name: Record
+    package: PKG_ESCOMPAT
+    ref: BUILTIN_RECORD
+  - name: Map
+    package: PKG_ESCOMPAT
+    ref: BUILTIN_MAP
   - name: AssertionError
     package: PKG_STD_CORE
     ref: BUILTIN_ASSERTION_ERROR
